# javy

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  download.sh  flake.nix  index.js  install-wasi-sdk.sh  p.js  pinned-nightly-version  rust-toolchain.toml  siberia_payment_on_delivery_input.json
crates/apis/: CHANGELOG.md  Cargo.toml  README.md  publish.sh
crates/apis/src/: api_config.rs  console.rs  lib.rs  runtime_ext.rs
crates/apis/src/console/: config.rs  mod.rs
crates/apis/src/json/: json.js  mod.rs
crates/apis/src/random/: mod.rs
crates/apis/src/stream_io/: io.js  mod.rs
crates/apis/src/text_codec/: mod.rs
crates/apis/src/text_encoding/: mod.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: as.wasm  baseline.rs  default.rs  i18n.rs  js.wasm  quickjs.rs  runner.rs  wasmtime.rs
crates/benchmarks/benches/default/: .gitignore  .shopify-cli.yml  package.json  script.json
crates/benchmarks/benches/i18n-lisan/: .gitignore  .lisanrc  .shopify-cli.yml  babel.config.js  package.json  script.json  tsconfig.json
crates/benchmarks/benches/i18n-next/: .npmrc  .shopify-cli.yml  jest.config.js  package.json  script.json  shopify-scripts-checkout-apis-ts-0.1.0.tgz  webpack.config.js
crates/benchmarks/benches/js-scripts/: i18n-next.js  lisan.js  noop.js
crates/benchmarks/benches/quickjs-compile/: Cargo.toml  quickjs_compile.wasm
crates/benchmarks/benches/quickjs-eval/: Cargo.toml  quickjs_eval.wasm
crates/benchmarks/benches/quickjs-startup/: Cargo.toml  quickjs_startup.wasm
crates/cli/: Cargo.toml  build.rs  id.wasm
crates/cli/benches/: benchmark.rs
crates/cli/src/: build.rs  bytecode.rs  commands.rs  exports.rs  js.rs  js_config.rs  js_module.rs  main.rs  module_generator.rs  opt.rs  option.rs  options.rs  plugin.rs  plugins.rs  prebuilt.rs  producers_section.rs  profiler.rs  providers.rs  runtime_config.rs  source_code_section.rs  transform.rs  wit.rs
crates/cli/src/codegen/: builder.rs  bytecode.rs  dynamic.rs  exports.rs  js.rs  mod.rs  plugin.rs  static.rs  transform.rs  wit.rs
crates/cli/src/templates/: js_module.wat
crates/cli/src/wasm_generator/: dynamic.rs  mod.rs  static.rs  transform.rs
crates/cli/tests/: convert.rs  dylib_test.rs  dynamic_linking_test.rs  id.proptest-regressions  id.rs  integration_test.rs  javy_quickjs_provider_v2.wasm  runner.rs  wasi.rs
crates/cli/tests/common/: mod.rs
crates/codegen/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/codegen/src/: builder.rs  bytecode.rs  exports.rs  js.rs  js_config.rs  lib.rs  plugin.rs  plugins.rs  transform.rs  wit.rs
crates/codegen/tests/: integration_test.rs
crates/comp/: Cargo.toml
crates/comp/src/: lib.rs
crates/core/: Cargo.toml  README.md  core.wit
crates/core/benches/: javy.control.wasm  javy.opt.wizer.wasm  javy.wizer.opt.wasm  javy.wizer.wasm  js.wasm  js_input.json  wasmtime.rs
crates/core/prelude/: io.js  text-encoding.js
crates/core/prelude_scripts/: prelude.js
crates/core/src/: alloc.rs  context.rs  engine.rs  execution.rs  globals.rs  index.js  input.rs  lib.rs  main.rs  namespace.rs  output.rs  qjs.rs  runtime.rs  runtime_trait.rs  serialization.rs  transcode.rs  walloc_bindings.rs
crates/javy/: CHANGELOG.md  Cargo.toml  README.md  publish.sh
crates/javy-apis/: Cargo.toml
crates/javy-apis/src/: api_config.rs  console.rs  lib.rs  runtime_ext.rs  stream_io.rs  text_encoding.rs
crates/javy/src/: alloc.rs  config.rs  console.rs  exported_fns.rs  interpret_config.rs  json.rs  lib.rs  messagepack.rs  runtime.rs  shared_config.rs  stream_io.rs  text_encoding.rs
crates/javy/tests/: 262.rs  misc.rs  string_keys_and_ref_counting.js  stringify_cycle.js
crates/plugin/: Cargo.toml
crates/plugin-api/: CHANGELOG.md  Cargo.toml  README.md  publish.sh
crates/plugin-api/src/: config.rs  javy_plugin.rs  lib.rs  namespace.rs  plugin_definition.rs  wasi_p1.rs
crates/plugin-processing/: Cargo.toml
crates/plugin-processing/src/: lib.rs  main.rs
crates/plugin/src/: bindings.rs  lib.rs
crates/plugin/wit/: world.wit
crates/profiler/: Cargo.toml  build.rs
crates/profiler-lib/: Cargo.toml
crates/profiler-lib/src/: ai.rs  format.rs  interpreter.rs  lib.rs  monitor.mm  state.rs
crates/profiler/src/: lib.rs
crates/quickjs-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/quickjs-sys/.cargo/: config
crates/quickjs-sys/extensions/: value.c
crates/quickjs-sys/quickjs/: quickjs-libc.c  quickjs.c
crates/quickjs-sys/src/: bindings.rs  lib.rs
crates/quickjs-wasm-rs/: CHANGELOG.md  Cargo.toml  README.md  publish.sh
crates/quickjs-wasm-rs/src/: javy_js_value.rs  javy_value.rs  json.rs  lib.rs  messagepack.rs  qjs_value.rs  sys.rs  transcoder.rs
crates/quickjs-wasm-sys/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install-wasi-sdk.sh  publish.sh  wrapper.h
crates/quickjs-wasm-sys/.cargo/: config
crates/quickjs-wasm-sys/extensions/: extern.c  extern.h  value.c
crates/quickjs-wasm-sys/patches/: quickjsc-patch.diff
crates/quickjs-wasm-sys/quickjs/: qjscalc.c  quickjs.c  run-test262
crates/quickjs-wasm-sys/walloc/: LICENSE.md  README.md  bindings.h  walloc.c  walloc.h  walloc_aligned.c
crates/runner/: .gitignore  Cargo.toml  test_plugin.wasm
crates/runner/src/: lib.rs
crates/test-macros/: Cargo.toml
crates/test-macros/src/: lib.rs
crates/test-plugin/: Cargo.toml
crates/test-plugin-wasip1/: Cargo.toml
crates/test-plugin-wasip1/src/: lib.rs
crates/test-plugin-wasip2/: Cargo.toml
crates/test-plugin-wasip2/src/: lib.rs
crates/test-plugin/src/: bindings.rs  lib.rs
crates/test-plugin/wit/: world.wit
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: json.js  json_differential.rs
javy/: Cargo.toml  build.sh
javy/.cargo/: config.toml
javy/benches/: as.optimized.wasm  javy.control.wasm  javy.opt.wizer.wasm  javy.wizer.3.wasm  javy.wizer.wasm  qjs_wasmtime.rs  startup.rs  wasmtime.rs
javy/src/: context.rs  engine.rs  fib.js  index.js  input.rs  lib.rs  output.rs  sample.rs  value.rs
(+267 files in other folders)
