[workspace]
members = [
  "crates/cli",
  "crates/codegen",
  "crates/javy",
  "crates/plugin",
  "crates/plugin-api",
  "crates/plugin-processing",
  "crates/test-invalid-plugin",
  "crates/test-macros",
  "crates/test-plugin-wasip1",
  "crates/test-plugin-wasip2",
  "crates/runner",
  "fuzz",
]
resolver = "2"

[workspace.package]
version = "8.0.0"
authors = ["The Javy Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
brotli = "8.0.2"
clap = { version = "4.5.57", features = ["derive"] }
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wizer = "41"
wasm-opt = "0.116.1"
anyhow = "1.0"
javy = { path = "crates/javy", version = "7.0.0-alpha.1" }
tempfile = "3.25.0"
tokio = "1"
uuid = { version = "1.20", features = ["v4"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
walrus = "0.24.5"
wasmparser = "0.244.0"

[profile.release]
lto = true
opt-level = 3
