[workspace]
members = [
  "crates/cli",
  "crates/codegen",
  "crates/javy",
  "crates/plugin",
  "crates/plugin-api",
  "crates/plugin-processing",
  "crates/test-invalid-plugin",
  "crates/test-macros",
  "crates/test-plugin-wasip1",
  "crates/test-plugin-wasip2",
  "crates/runner",
  "fuzz",
  "release",
  "crates/profiler-lib",
  "crates/profiler",
]
resolver = "2"

[workspace.package]
version = "9.0.0"
authors = ["The Javy Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
brotli = "8.0.3"
clap = { version = "4.6.1", features = ["derive"] }
deterministic-wasi-ctx = "=4.0.4"
wasmtime = "46.0.0"
wasmtime-wasi = "46.0.0"
wasmtime-wizer = "46.0.0"
wasm-opt = "0.116.1"
anyhow = "1.0"
javy = { path = "crates/javy", version = "8.0.1-alpha.1" }
tempfile = "3.27.0"
tokio = "1"
uuid = { version = "1.23", features = ["v4"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
walrus = "0.26.4"
wasmparser = "0.251.0"

[profile.release]
lto = true
opt-level = 3
