[package]
name = "javy"
version = "0.1.0"
authors = ["Saúl Cabrera <saulecabrera@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quickjs-sys = { path = "../quickjs-sys" }

[dev-dependencies]
criterion = "0.3"
wasmtime = "0.26.0"
wasmtime-wasi = "0.26.0"

[[bench]]
name = "startup"
harness = false

[features]
wizer = []

[profile.release]
lto = true
