[package]
name = "javy-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "javy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
walrus = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
javy-codegen = { path = "../codegen/", features = ["plugin_internal"] }
javy-plugin-processing = { path = "../plugin-processing" }

[dev-dependencies]
criterion = "0.7"
num-format = "0.4.4"
wasmparser = { workspace = true }
javy-runner = { path = "../runner/" }
javy-test-macros = { path = "../test-macros/" }

[build-dependencies]
anyhow = { workspace = true }
javy-plugin-processing = { path = "../plugin-processing" }
tempfile = { workspace = true }
wasm-opt = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
