[package]
name = "javy-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "javy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
walrus = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
clap = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
javy-codegen = { path = "../codegen/", features = ["plugin_internal"] }
javy-plugin-processing = { path = "../plugin-processing" }
javy-profiler = { path = "../profiler", optional = true }

[features]
default = []
# Experimental support to profile JS execution on WebAssembly.
profiler = ["dep:javy-profiler"]

[dev-dependencies]
brotli = { workspace = true }
javy-runner = { path = "../runner/" }
javy-test-macros = { path = "../test-macros/" }
wasmtime-wasi = { workspace = true }
wit-component = "0.252.0"

[build-dependencies]
anyhow = { workspace = true }
javy-plugin-processing = { path = "../plugin-processing" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[package.metadata.javy.feature-assets]
profiler = "cargo build -p=javy-profiler-lib --target=wasm32-wasip1 --release"
