[package]
name = "javy-codegen"
version = "2.1.0-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Wasm generation library for use with Javy"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/codegen"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/codegen"
categories = ["wasm"]

[features]
plugin_internal = []

[dependencies]
wizer = { workspace = true }
anyhow = { workspace = true }
brotli = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
walrus = { workspace = true }
swc_core = { version = "44.0.2", features = [
  "common_sourcemap",
  "ecma_ast",
  "ecma_parser",
] }
wit-parser = "0.212.0"
convert_case = "0.8.0"
wasm-opt = { workspace = true }
tempfile = { workspace = true }
wasmparser = { workspace = true }

[dev-dependencies]
insta = "1.43.2"
wasmprinter = "0.240.0"
