[package]
name = "javy-codegen"
version = "4.0.0-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Wasm generation library for use with Javy"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/codegen"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/codegen"
categories = ["wasm"]

[features]
plugin_internal = []

[dependencies]
anyhow = { workspace = true }
brotli = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wizer = { workspace = true, features = ["wasmtime"] }
walrus = { workspace = true }
swc_core = { version = "49.0.0", features = [
  "common_sourcemap",
  "ecma_ast",
  "ecma_parser",
] }
wit-parser = "0.240.0"
convert_case = "0.10.0"
wasm-opt = { workspace = true }
tempfile = { workspace = true }
wasmparser = { workspace = true }

[dev-dependencies]
insta = "1.43.3"
tokio = { workspace = true, features = ["macros"] }
wasmprinter = "0.240.0"
