[package]
name = "javy-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "javy_core"
path = "src/main.rs"

[lib]
name = "javy_quickjs_provider"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true, features = ["export_alloc_fns", "json"] }
once_cell = { workspace = true }
javy-config = { workspace = true }

[features]
experimental_event_loop = []
experimental_crypto = []
