[package]
name = "javy-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "javy_quickjs_provider"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true, features = [
    "export_alloc_fns",
    "json",
    "shared_config",
] }
once_cell = { workspace = true }

[features]
experimental_event_loop = []
