[package]
name = "javy-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "javy_quickjs_provider"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy-plugin-api = { path = "../plugin-api", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
experimental_event_loop = ["javy-plugin-api/experimental_event_loop"]
