[package]
name = "javy-apis"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
console = []
stream_io = []
text_encoding = []

[dependencies]
anyhow = { workspace = true }
quickjs-wasm-rs = { path = "../quickjs-wasm-rs" }
javy = { path = "../javy" }
