[package]
name = "javy"
version = "3.0.0-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Configurable JavaScript runtime for WebAssembly"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/javy"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/javy"
categories = ["wasm"]

[dependencies]
anyhow = { workspace = true }
rquickjs = { version = "0.5.1", features = ["array-buffer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde-transcode = { version = "1.1", optional = true }
rmp-serde = { version = "^1.1", optional = true }
# TODO: cargo doesn't seem to pickup the fact that quickcheck is only used for
# tests.
quickcheck = "1"

[features]
export_alloc_fns = []
messagepack = ["rmp-serde", "serde-transcode"]
json = ["serde_json", "serde-transcode"]
