[package]
name = "javy-plugin-api"
version = "7.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "APIs for Javy plugins"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/plugin-api"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/plugin-api"
categories = ["wasm"]

[package.metadata.javy]
targets = ["wasip1", "wasip2"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true }

[features]
json = ["javy/json"]
messagepack = ["javy/messagepack"]
