[package]
name = "quickjs-wasm-rs"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level bindings and serializers for a Wasm build of QuickJS"
homepage = "https://github.com/Shopify/javy/tree/main/crates/quickjs-wasm-rs"
repository = "https://github.com/Shopify/javy/tree/main/crates/quickjs-wasm-rs"
categories = ["api-bindings"]

[dependencies]
anyhow = { workspace = true }
quickjs-wasm-sys = { version = "0.1.2", path = "../quickjs-wasm-sys" }
rmp-serde = { version = "^0.15", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde-transcode = { version = "1.1", optional = true }
once_cell = "1.16"

[dev-dependencies]
quickcheck = "1"
serde_bytes = "0.11.7"

[features]
messagepack = ["rmp-serde", "serde-transcode"]
json = ["serde_json", "serde-transcode"]
