[package]
name = "quickjs-wasm-rs"
version = "2.0.0-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level bindings and serializers for a Wasm build of QuickJS"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-rs"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-rs"
categories = ["api-bindings"]

[dependencies]
anyhow = { workspace = true }
quickjs-wasm-sys = { version = "1.1.0", path = "../quickjs-wasm-sys" }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.16"

[dev-dependencies]
quickcheck = "1"
serde_bytes = "0.11.7"
