[package]
name = "quickjs-wasm-sys"
version = "1.1.2-alpha.1"
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Rust bindings for Wasm build of QuickJS"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-sys"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-sys"
categories = ["external-ffi-bindings"]

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"
walkdir = "2"
anyhow.workspace = true
tokio = { version = "1.35", default-features = false, features = ["rt", "macros"] }
http-body-util = "0.1.0"
hyper = "1.1"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.2", features = ["http1"] }
