[package]
name = "javy-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
wasmparser = "0.228.0"
