[package]
name = "javy-runner"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
wasmparser = { workspace = true }
