[package]
name = "javy-test-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true
doctest = false

[dependencies]
anyhow = { workspace = true }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
