[package]
name = "javy-test-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true
doctest = false

[dependencies]
anyhow = { workspace = true }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
