[package]
name = "javy-test-plugin-wasip1"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "test_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy-plugin-api = { path = "../plugin-api", features = ["json"] }
