[package]
name = "javy-test-plugin-wasip1"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.javy]
targets = ["wasip1"]

[lib]
name = "test_plugin"
crate-type = ["cdylib"]
test = false

[dependencies]
anyhow = { workspace = true }
javy-plugin-api = { path = "../plugin-api", features = ["json"] }
